[package]
name = "nethermit"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to convert Jsonnet to YAML"
authors = ["Rui Vieira <ruidevieira@googlemail.com>"]
license = "Apache-2.0"
repository = "https://gitlab.com/ruivieira/nethermit"
readme = "README.md"
keywords = ["jsonnet", "yaml", "cli", "converter"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.publish]
allow = ["gitlab:ruivieira/nethermit"]


[[bin]]
name = "nethermit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
jsonnet-rs = "0.17.0"
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
